--- a/src/style/shared/select.less
+++ b/src/style/shared/select.less
@@ -42,6 +42,10 @@
     border-top: 1px solid @color-section-rule;
 }
 
+.select__header:first-child {
+    border: none;
+}
+
 .select__option__info {
     margin-left: 1rem;
     color: @warm-gray;
